--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -11,6 +11,7 @@
             <ul tabindex="0" class="menu menu-sm dropdown-content right-0 mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
                 <li><a class="<%= (page == "/lego/sets") ? 'active' : '' %>" href="/lego/sets">View Collection</a></li>
                 <li><a class="<%= (page == "/about") ? 'active' : '' %>" href="/about">About</a></li>
+                <li><a class="<%= (page == "/lego/addSet") ? 'active' : '' %>" href="/lego/addSet">Add to Collection</a></li>
             </ul>
         </div>
     <!-- Regular Nav -->
@@ -18,6 +19,7 @@
         <ul class="menu menu-horizontal px-1">
             <li><a class="<%= (page == "/lego/sets") ? 'active' : '' %>" href="/lego/sets">View Collection</a></li>
             <li><a class="<%= (page == "/about") ? 'active' : '' %>" href="/about">About</a></li>
+            <li><a class="<%= (page == "/lego/addSet") ? 'active' : '' %>" href="/lego/addSet">Add to Collection</a></li>
         </ul>
     </div>
 </div>
