--- a/views/sets.ejs
+++ b/views/sets.ejs
@@ -42,7 +42,7 @@
                     </td>
                     <!-- Name -->
                     <td>
-                        <%= set.name %> | <a href="/lego/sets?theme=<%= set.theme %>" class="btn mt-2 btn-xs"><%= set.theme %></a>
+                        <%= set.name %> | <a href="/lego/sets?theme=<%= set.Theme.name %>" class="btn mt-2 btn-xs"><%= set.Theme.name %></a>
                     </td>
                     <!-- Year/Parts -->
                     <td>
